@@ -33,7 +33,7 @@ examples <- function(save.png=FALSE) {
 demos <- function(which=c("sources", "protein.equil", "affinity", "NaCl", "density", 
   "ORP", "findit", "ionize", "buffer", "protbuff", "glycinate",
   "mosaic", "copper", "arsenic", "solubility", "gold", "contour", "sphalerite",
-  "Shh", "saturation", "adenine", "DEW", "lambda", "TCA", "aluminum",
+  "Shh", "saturation", "adenine", "DEW", "lambda", "berman", "TCA", "aluminum",
   "AkDi", "comproportionation"), save.png=FALSE) {
   # run one or more demos from CHNOSZ with ask=FALSE, and return the value of the last one
   for(i in 1:length(which)) {
